--- a/app/src/main/res/layout/activity_primeiros_socorros.xml
+++ b/app/src/main/res/layout/activity_primeiros_socorros.xml
@@ -43,7 +43,8 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:contentDescription="@string/imgbtn_video"
-                android:src="@android:drawable/btn_star"
+                android:scaleType="fitXY"
+                android:src="@drawable/icon_video_b"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
@@ -51,7 +52,8 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:contentDescription="@string/imgbtn_perfil"
-                android:src="@android:drawable/btn_star"
+                android:scaleType="fitXY"
+                android:src="@drawable/icon_perfil_b"
                 tools:ignore="TouchTargetSizeCheck" />
 
         </LinearLayout>
@@ -112,7 +114,7 @@
                     android:layout_height="40dp">
 
                     <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_engasgo"
+                        android:id="@+id/chip_papelao"
                         style="@style/Widget.Material3.Chip.Filter.Elevated"
                         android:layout_width="90dp"
                         android:layout_height="40dp"
@@ -123,7 +125,7 @@
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_queima"
+                        android:id="@+id/chip_tecido"
                         style="@style/Widget.Material3.Chip.Filter.Elevated"
                         android:layout_width="110dp"
                         android:layout_height="40dp"
@@ -133,7 +135,7 @@
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_fratura"
+                        android:id="@+id/chip_papel"
                         style="@style/Widget.Material3.Chip.Filter.Elevated"
                         android:layout_width="80dp"
                         android:layout_height="40dp"
@@ -143,7 +145,7 @@
                         tools:ignore="TouchTargetSizeCheck" />
 
                     <com.google.android.material.chip.Chip
-                        android:id="@+id/chip_intoxi"
+                        android:id="@+id/chip_plastico"
                         style="@style/Widget.Material3.Chip.Filter.Elevated"
                         android:layout_width="110dp"
                         android:layout_height="40dp"
