--- a/app/src/main/res/layout/activity_tutoriais.xml
+++ b/app/src/main/res/layout/activity_tutoriais.xml
@@ -65,35 +65,35 @@
                 android:layout_height="40dp">
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_engasgo"
+                    android:id="@+id/chip_papelao"
                     style="@style/Widget.Material3.Chip.Filter.Elevated"
                     android:layout_width="90dp"
                     android:layout_height="40dp"
-                    android:text="@string/scr_txt_engasgo"
+                    android:text="@string/titulo_categoria1"
                     tools:ignore="TouchTargetSizeCheck" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_queima"
+                    android:id="@+id/chip_tecido"
                     style="@style/Widget.Material3.Chip.Filter.Elevated"
                     android:layout_width="110dp"
                     android:layout_height="40dp"
-                    android:text="@string/scr_txt_queima"
+                    android:text="@string/titulo_categoria2"
                     tools:ignore="TouchTargetSizeCheck" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_fratura"
+                    android:id="@+id/chip_papel"
                     style="@style/Widget.Material3.Chip.Filter.Elevated"
                     android:layout_width="80dp"
                     android:layout_height="40dp"
-                    android:text="@string/scr_txt_frat"
+                    android:text="@string/titulo_categoria3"
                     tools:ignore="TouchTargetSizeCheck" />
 
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/chip_intoxi"
+                    android:id="@+id/chip_plastico"
                     style="@style/Widget.Material3.Chip.Filter.Elevated"
                     android:layout_width="110dp"
                     android:layout_height="40dp"
-                    android:text="@string/scr_txt_into"
+                    android:text="@string/titulo_categoria4"
                     tools:ignore="TouchTargetSizeCheck" />
 
                 <com.google.android.material.chip.Chip
@@ -297,6 +297,8 @@
                 android:layout_marginStart="30dp"
                 android:layout_marginEnd="30dp"
                 android:contentDescription="@string/imgbtn_video"
+                android:scaleType="fitXY"
+                android:src="@drawable/icon_video_b"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <ImageButton
@@ -304,6 +306,8 @@
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:contentDescription="@string/imgbtn_perfil"
+                android:scaleType="fitXY"
+                android:src="@drawable/icon_perfil_b"
                 tools:ignore="TouchTargetSizeCheck" />
 
         </LinearLayout>
